# granulometry-rocks

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  requirements.txt
src/: cut_video.py  main.py  video_auditor.py
src/analysis/: calibration.py  contour_measurement.py
src/app/: dashboard_ui.py
src/cpp/: hello_vision.cpp  hot_path.cpp
src/pipeline/: rock_analyzer.py
src/preprocessing/: canny_detector.py  clahe_filter.py  edge_detector.py  morphology.py
src/tools/: generate_release_metrics.py
src/ui/: dashboard.py
src/utils/: data_logger.py
